--- a/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
+++ b/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="row">
+<div class="row">
   <div class="col">
     <div class="switcher p-t-10">
       <input type="checkbox" id="nota_credito" class="ml-5" name="nota_credito"
@@ -6,7 +6,7 @@
       <label for="nota_credito" style="width: auto; margin-left: -15px;"> XML / Papel </label>
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="row mt-5">
   <div class="col-md-12">
@@ -69,11 +69,11 @@
               name="archivo" />
           </div>
         </div>
-        <div class="switcher p-t-10">
+        <!-- <div class="switcher p-t-10">
           <input type="checkbox" id="nota_credito" class="ml-5" name="nota_credito"
             (click)="onTipoDocumentoChange($event.target.checked)">
           <label for="nota_credito" style="width: auto; margin-left: -15px;"> XML / Papel </label>
-        </div>
+        </div> -->
       </form>
     </div>
     <div *ngIf="!documento_papel" class="form-row">
