--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-list/caja-chica-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-list/caja-chica-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-2" style="padding-bottom: 2em;">
     <a id="agregarDepartamento" routerLink="/home/comprobaciones/caja_chica/add" class="btn btn-primary"
-      *ngIf="globals.menuDinamico.gastos_comprobacion_prestacion_add"> Nueva Comprobación Caja </a>
+      *ngIf="globals.menuDinamico.gastos_comprobacion_prestacion_add"> Comprobar </a>
   </div>
 </div>
 
