--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-12 col-lg-12 col-xl-12" style="padding-bottom: 2em;">
-    <a class="btn btn-primary text-white m-1" style="float: right;" (click)="guardar()">
-      Guardar
+    <a class="btn btn-primary text-white m-1" style="float: right;" (click)="enviar()">
+      Enviar
     </a>
     <a class="btn btn-danger text-white m-1" routerLink="/home/comprobaciones/gastos_viaje" style="float: right;">
       Cancelar
     </a>
-    <a class="btn btn-primary text-white m-1" style="float: right;" (click)="enviar()">
-      Enviar
+    <a class="btn btn-primary text-white m-1" style="float: right;" (click)="guardar()">
+      Guardar
     </a>
   </div>
 </div>
@@ -128,8 +128,9 @@
                   <th scope="">Razón Social</th>
                   <th scope="">Concepto</th>
                   <th scope="">Moneda del Comprobante</th>
-                  <th scope="">Importe a Reembolsar</th>
+                  <th scope="">Importe a Reembolsar MXN</th>
                   <th scope="">Documentos</th>
+                  <th scope="">Comprobante</th>
                   <th scope="">Acciones</th>
                 </tr>
               </thead>
@@ -151,7 +152,15 @@
                     </div>
                   </td>
                   <td>
-                    <button (click)="eliminarConcepto(i)"><em class="fas fa-trash"></em></button>
+                    <div class="text-center">
+                      <a><em class="fas fa-file-alt" data-toggle="modal" data-target=".bd-example-modal-lg"></em></a>
+                      <!-- <a><em class="fas fa-file-alt" (click)="modalDetalle()"></em></a> -->
+                    </div>
+                  </td>
+                  <td>
+                    <div class="text-center">
+                      <a (click)="eliminarConcepto(i)"><em class="fas fa-trash"></em></a>
+                    </div>
                   </td>
                 </tr>
               </tbody>
@@ -162,110 +171,18 @@
     </div>
 
   </div>
-  <div class="row mb-3">
-    <div class="col-12">
-      <button class="btn btn-primary" style="float: right;" data-toggle="modal" data-target=".bd-example-modal-lg">
-        Agregar
-      </button>
-      <button class="btn btn-primary m-1" style="float: right;" (click)="modalDetalle()">
-        detalle factura
-      </button>
-    </div>
+  <div class="col-md-12 col-lg-12 col-xl-12 mb-3">
+    <button class="btn btn-primary" style="float: right;" (click)="addConcepto()">
+      Agregar
+    </button>
+    <!--  <button class="btn btn-primary" style="float: right;" data-toggle="modal" data-target=".bd-example-modal-lg">
+      Agregar
+    </button> -->
   </div>
 </div>
 
-<!-- inicio de modal detalle -->
-
-<div class="modal fade " id="modal_detalle" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true"
-  style="max-height:100%;">
-  <div class=" modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title p-b-15" id="ModalLabel">Detalle de una Factura</h4>
-        <button type="button" class="close btn-danger modal-sm" (click)="cerrarModalDetalle()" data-dismiss="modal"
-          aria-label="Close">
-          <span aria-hidden="true"></span>
-        </button>
-      </div>
-
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="panel panel-inverse">
-              <div class="panel-heading">
-                <h4 class="panel-title">Lista - Gastos</h4>
-              </div>
-              <div class="panel-body table-responsive">
-                <table id="tabla_detalle_factura"
-                  class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
-                  <caption></caption>
-                  <thead>
-                    <tr>
-                      <th scope="">id</th>
-                      <th scope="">linea</th>
-                      <th scope="">Cantidad</th>
-                      <th scope="">Descripción</th>
-                      <th scope="">Valor Unitario</th>
-                      <th scope="">Unidad</th>
-                      <th scope="">Importe</th>
-                      <th scope="">Concepto</th>
-                      <th scope="">Monto a Reembolsar</th>
-                      <th scope="">Comprobante Fiscal</th>
-                      <th scope="">Impuestos</th>
-                      <th scope="">Anexos</th>
-                      <th scope="">Adicional</th>
-                      <th scope="">No aplica</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr class="gradeU" *ngFor="let factura of list_detalle_factura; let i = index">
-                      <td>{{i + 1}}</td>
-                      <td>{{factura.linea}}</td>
-                      <td>{{factura.cantidad}}</td>
-                      <td>{{factura.descripcion}}</td>
-                      <td>{{factura.valor_unitario | currency}}</td>
-                      <td>{{factura.unidad}}</td>
-                      <td>{{factura.importe}}</td>
-                      <td>{{factura.concepto }}</td>
-                      <td>
-                        <div>
-                          <label><small>monto</small></label>
-                          <input type="text">
-                        </div>
-                      </td>
-                      <td>
-                        <div>
-                          <input type="checkbox">
-                        </div>
-                      </td>
-                      <td>
-                        <h4>%</h4>
-                      </td>
-                      <td>
-                        <button><em class="fas fa-folder"></em></button>
-                      </td>
-                      <td>
-                        <button><em class="fas fa-file-archive"></em></button>
-                      </td>
-                      <td>
-                        <div>
-                          <input type="checkbox">
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- fin de modal detalle -->
+<!-- modal detalle -->
+<app-modal-detalle-factura></app-modal-detalle-factura>
 
 <div class="modal fade bd-example-modal-lg" id="modal_comprobante" tabindex="-1" role="dialog"
   aria-labelledby="myLargeModalLabel" data-backdrop="static" data-keyboard="false" aria-hidden="true">
@@ -434,8 +351,9 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" (click)="cerrarModal()" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" (click)="addConcepto()">Agregar</button>
+        <button type="button" class="btn btn-danger" (click)="cerrarModal()" data-dismiss="modal">Guardar</button>
+        <button type="button" class="btn btn-primary" (click)="modalDetalle()">Asignar lineas</button>
+        <!-- <button type="button" class="btn btn-primary" (click)="addConcepto()">Agregar</button> -->
       </div>
     </div>
   </div>
