--- a/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-list/otros-gastos-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-list/otros-gastos-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-2" style="padding-bottom: 2em;">
     <a id="agregarDepartamento" routerLink="/home/comprobaciones/otros_gastos/add" class="btn btn-primary"
-      *ngIf="globals.menuDinamico.gastos_comprobacion_prestacion_add"> Nueva Comprobación Otros gastos </a>
+      *ngIf="globals.menuDinamico.gastos_comprobacion_prestacion_add"> Reembolso Otros gastos </a>
   </div>
 </div>
 
