--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -75,9 +75,9 @@
                   <a *ngIf="item.xml !== '' " target="_blank" [href]="item.xml" class="btn ml-2"> <i
                       class="far fa-file-code"></i> </a>
                   <button *ngIf="item.xml && item.xml != ''" class="btn ml-2"
-                    (click)="mostrarInterprete($event.target, item.folio_fiscal)"><i
-                      (click)="mostrarInterprete($event.target, item.folio_fiscal)"
-                      class="fas fa-eye mr-1"></i></button>
+                    (click)="mostrarInterprete($event.target, item.folio_fiscal)">
+                    <i class="fas fa-eye mr-1"></i>
+                  </button>
                   <button class="btn ml-2" (click)="mostrarModal(item.documento_id, item.folio_fiscal)"><i
                       class="fas fa-file mr-1"></i>Actualizar PDF </button>
                 </div>
