--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -62,9 +62,9 @@
                   <a *ngIf="item.xml !== '' " target="_blank" [href]="item.xml" class="btn ml-2"> <i
                       class="far fa-file-code"></i> </a>
                   <button *ngIf="item.xml && item.xml != ''" class="btn ml-2"
-                    (click)="mostrarInterprete($event.target, item.folio_fiscal)"><i
-                      (click)="mostrarInterprete($event.target, item.folio_fiscal)"
-                      class="fas fa-eye mr-1"></i></button>
+                    (click)="mostrarInterprete($event.target, item.folio_fiscal)">
+                    <i class="fas fa-eye mr-1"></i>
+                  </button>
                   <button class="btn ml-2" (click)="mostrarModal(item.documento_id, item.folio_fiscal)"><i
                       class="fas fa-file mr-1"></i>Actualizar PDF </button>
                 </div>
@@ -108,3 +108,4 @@
 <app-modal-acutalizar-documento id="modal" titulo="Actualizar Archivo" [id_Doc]="id_Doc" [folio_fiscal]="folio_fiscal"
   [identificador_corporativo]="identificador_corporativo" (onDatoActualizado)="actualizarTabla()">
 </app-modal-acutalizar-documento>
+<app-visor-factura [CFDI]="detalles_factura"></app-visor-factura>
