--- a/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
+++ b/src/app/modulos/bandeja-aprobacion/bandeja-aprobacion-mx/bandeja-aprobacion-mx.component.html
@@ -36,6 +36,11 @@
         (click)="cambio('nota_credito')" value="nota_credito">
       <label class="form-check-label" for="nota_credito">Notas de Crédito</label>
     </div>
+    <div *ngIf="globals.menuDinamico.bandeja_aprobacion_complemento_pago" class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="consulta_amortizadores" id="complemento_pago"
+        (change)="cambio('complemento_pago')" value="complemento_pago">
+      <label class="form-check-label" for="complemento_pago"> Complemento pago</label>
+    </div>
   </div>
 </div>
 <!-- Fin de los botones -->
@@ -68,19 +73,27 @@
   [mostrar_boton]="mostrar_btn">
 </app-list-proveedores-informales-pais>
 
-<!-- Facturas proveedor -->
-<app-list-facturas-proveedor-pais
-  *ngIf="globals.menuDinamico.bandeja_aprobacion_factura_proveedor && tablaMostrar == 'facturas_proveedor'"
-  [mostrar_boton]="mostrar_btn">
-</app-list-facturas-proveedor-pais>
 
 <!-- Comprobacion Gsatos de Viaje -->
 <app-list-comprobaciones-pais #tabla_comprobaciones [bandeja_aprobacion]="true" [mostrar_btn]="false"
   *ngIf="globals.menuDinamico.bandeja_aprobacion_comprobacion_gasto_viaje && tablaMostrar === 'comprobacion_gasto_viaje'">
 </app-list-comprobaciones-pais>
 
+<!-- Facturas proveedor -->
+<app-list-facturas-proveedor-pais
+  *ngIf="globals.menuDinamico.bandeja_aprobacion_factura_proveedor && tablaMostrar == 'facturas_proveedor'"
+  [mostrar_boton]="mostrar_btn">
+</app-list-facturas-proveedor-pais>
+
 <!-- Notas de Crédito-->
+
 <app-list-notas-credito-pais *ngIf="tablaMostrar == 'nota_credito'" [mostrar_boton]="mostrar_btn">
 </app-list-notas-credito-pais>
+
+<!-- Complemento de Pago -->
+<app-list-complemento-pago-pais
+  *ngIf="globals.menuDinamico.bandeja_aprobacion_complemento_pago && tablaMostrar == 'complemento_pago'"
+  [mostrar_boton]="mostrar_btn">
+</app-list-complemento-pago-pais>
 
 <!-- Fin de tablas con filtro -->
