--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -6,15 +6,14 @@
 </div>
 
 <div class="row">
-  <div class="col-lg-12">
+  <div class="col-md-12 col-lg-12 col-xl-12">
     <div class="panel panel-inverse">
       <div class="panel-heading">
         <h4 class="panel-title">Lista - Comprobaciones Gastos de Viaje</h4>
       </div>
       <div class="panel-body table-responsive">
         <table id="tabla_departamentos_rci"
-          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
-          width="100%" style="max-width: 100%; ">
+          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
           <thead>
             <tr>
               <th>Departamento</th>
