--- a/src/app/modulos/gastos-viaje/main-gastos-viaje/main-gastos-viaje.component.html
+++ b/src/app/modulos/gastos-viaje/main-gastos-viaje/main-gastos-viaje.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<div id="content" class="content">
+  <ol class="breadcrumb pull-right">
+    <li class="breadcrumb-item">
+      <a routerLink="/home/inicio">Gastos Viaje</a>
+    </li>
+    <li class="breadcrumb-item active">Comprobaciones</li>
+  </ol>
+  <h1 class="page-header">Comprobar Gastos de Viaje<small></small></h1>
+  <div class="col-md-12">
+    <router-outlet></router-outlet>
+  </div>
+</div>
