[add] Ramirez Angel ajustes sobre la matris de pruebas

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -331,10 +331,11 @@
                     </div>
 
                     <div class="col-md-3 mt-3">
-                      <div class="form-group">
-                        <label for="comprobante_fiscal">Comprobante Fiscal</label>
-                        <input class="form-control" type="checkbox" id="comprobante_fiscal" name="comprobante_fiscal"
-                          formControlName="comprobante_fiscal" class="form-control">
+                      <div class="switcher p-t-10">
+                        <input type="checkbox" id="comprobante_fiscal" name="comprobante_fiscal"
+                          formControlName="comprobante_fiscal">
+                        <label for="comprobante_fiscal" style="width: auto; margin-left: -15px;">Comprobante
+                          Fiscal</label>
                       </div>
                     </div>
 
